crates/jdlint_dart_parser/tests/snapshots/parser_tests__snap_sealed_class.snap
---
source: crates/jdlint_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
Class(
    ClassDecl {
        annotations: [],
        modifiers: ClassModifiers {
            is_abstract: false,
            is_interface: false,
            is_base: false,
            is_final: false,
            is_sealed: true,
        },
        name: Identifier {
            name: "Result",
            span: Span {
                start: 13,
                end: 19,
            },
        },
        type_params: [
            TypeParam {
                name: Identifier {
                    name: "T",
                    span: Span {
                        start: 20,
                        end: 21,
                    },
                },
                bound: None,
                span: Span {
                    start: 20,
                    end: 21,
                },
            },
        ],
        extends: None,
        with_clause: [],
        implements: [],
        members: [],
        span: Span {
            start: 0,
            end: 25,
        },
    },
)
