crates/jdlint_dart_parser/tests/snapshots/parser_tests__snap_switch_pattern_guard.snap
---
source: crates/jdlint_dart_parser/tests/parser_tests.rs
assertion_line: 1368
expression: "prog.declarations[0]"
---
Function(
    FunctionDecl {
        annotations: [],
        is_external: false,
        is_async: false,
        is_generator: false,
        is_getter: false,
        is_setter: false,
        return_type: Some(
            Named(
                NamedType {
                    segments: [
                        Identifier {
                            name: "String",
                            span: Span {
                                start: 0,
                                end: 6,
                            },
                        },
                    ],
                    type_args: [],
                    is_nullable: false,
                    span: Span {
                        start: 0,
                        end: 7,
                    },
                },
            ),
        ),
        name: Identifier {
            name: "classify",
            span: Span {
                start: 7,
                end: 15,
            },
        },
        type_params: [],
        params: FormalParamList {
            positional: [
                FormalParam {
                    annotations: [],
                    is_required: true,
                    is_covariant: false,
                    is_final: false,
                    is_field: false,
                    is_super: false,
                    param_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "int",
                                        span: Span {
                                            start: 16,
                                            end: 19,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 16,
                                    end: 20,
                                },
                            },
                        ),
                    ),
                    name: Identifier {
                        name: "n",
                        span: Span {
                            start: 20,
                            end: 21,
                        },
                    },
                    default_value: None,
                    function_params: None,
                    span: Span {
                        start: 16,
                        end: 21,
                    },
                },
            ],
            optional_positional: [],
            named: [],
            span: Span {
                start: 15,
                end: 23,
            },
        },
        body: Some(
            Arrow(
                Switch {
                    subject: Ident(
                        Identifier {
                            name: "n",
                            span: Span {
                                start: 34,
                                end: 35,
                            },
                        },
                    ),
                    arms: [
                        SwitchExprArm {
                            pattern: Relational {
                                op: Lt,
                                value: IntLit {
                                    value: "0",
                                    span: Span {
                                        start: 41,
                                        end: 43,
                                    },
                                },
                                span: Span {
                                    start: 39,
                                    end: 43,
                                },
                            },
                            guard: None,
                            body: StringLit(
                                StringLitNode {
                                    raw: "'neg'",
                                    value: "neg",
                                    span: Span {
                                        start: 46,
                                        end: 51,
                                    },
                                },
                            ),
                            span: Span {
                                start: 39,
                                end: 51,
                            },
                        },
                        SwitchExprArm {
                            pattern: Literal(
                                LiteralPattern {
                                    value: Int(
                                        "0",
                                    ),
                                    span: Span {
                                        start: 53,
                                        end: 55,
                                    },
                                },
                            ),
                            guard: None,
                            body: StringLit(
                                StringLitNode {
                                    raw: "'zero'",
                                    value: "zero",
                                    span: Span {
                                        start: 58,
                                        end: 64,
                                    },
                                },
                            ),
                            span: Span {
                                start: 53,
                                end: 64,
                            },
                        },
                        SwitchExprArm {
                            pattern: Wildcard {
                                type_: None,
                                span: Span {
                                    start: 66,
                                    end: 68,
                                },
                            },
                            guard: None,
                            body: StringLit(
                                StringLitNode {
                                    raw: "'pos'",
                                    value: "pos",
                                    span: Span {
                                        start: 71,
                                        end: 76,
                                    },
                                },
                            ),
                            span: Span {
                                start: 66,
                                end: 77,
                            },
                        },
                    ],
                    span: Span {
                        start: 26,
                        end: 78,
                    },
                },
                Span {
                    start: 23,
                    end: 79,
                },
            ),
        ),
        span: Span {
            start: 0,
            end: 79,
        },
    },
)
